--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,3 +1,6 @@
+R0.0.0-0.0.3	2022-05-11 Bruce Hill
+	Build for EPICS base/R7.0.3.1-1.0
+
 R0.0.0-0.0.2 2020-06-24 Bruce Hill
 	Deploy new eget w/ unquoted output.
 	Actual changes are to pvAccess and pvData, so this
